Fixing issue with email not fitting.

--- a/src/css/components/social-list.scss
+++ b/src/css/components/social-list.scss
@@ -18,7 +18,7 @@
   }
 
   .social-list__item {
-    width: 100px;
+    width: 130px;
   }
 
   .social-list__icon {
